tests/tooling/fixtures/native/execution/positive/bitwise_precedence.objc3
module BitwisePrecedence;

fn main() -> i32 {
  let x = 1 | 2 ^ 3 & 4;
  let y = 1 + 2 << 2;
  let z = 16 >> 2 + 1;
  return x + y + z;
}