tests/tooling/fixtures/native/execution/negative/nested_block_missing_rbrace.objc3
module NestedBlockMissingRbrace;

fn main() -> i32 {
  {
    let x = 1;
  }
  {
    let y = 2;
  return y;
}
